--- a/@core/.env
+++ b/@core/.env
@@ -2,14 +2,14 @@ APP_NAME=arabcode
 APP_ENV=production
 APP_KEY=base64:vtKzmcpulkdMMD0QrpaSuAHJaywzcHqWOuO3qo52tUI=
 APP_DEBUG=true
-APP_URL=http://dizzcox.test
+APP_URL=http://ac_1.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=dizzcox
+DB_DATABASE=ac_1
 DB_USERNAME=root    
 DB_PASSWORD=12345678
 
