--- a/@core/.env
+++ b/@core/.env
@@ -2,7 +2,7 @@ APP_NAME=arabcode
 APP_ENV=production
 APP_KEY=base64:vtKzmcpulkdMMD0QrpaSuAHJaywzcHqWOuO3qo52tUI=
 APP_DEBUG=true
-APP_URL=http://ac_1.test
+APP_URL=http://dizzcox.test
 
 LOG_CHANNEL=stack
 
