--- a/@core/.env
+++ b/@core/.env
@@ -2,16 +2,16 @@ APP_NAME=arabcode
 APP_ENV=production
 APP_KEY=base64:vtKzmcpulkdMMD0QrpaSuAHJaywzcHqWOuO3qo52tUI=
 APP_DEBUG=true
-APP_URL=http://dizzcox.test
+APP_URL=http://ac.arabcode.online
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ac_1
-DB_USERNAME=root    
-DB_PASSWORD=12345678
+DB_DATABASE=mazyonah_ac1
+DB_USERNAME=mazyonah_ac1
+DB_PASSWORD=L0&jkb3bDKxk
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
